@@ -6,6 +6,7 @@
 - added new events `ON('request')`, `ON('controller')` and `ON('websocket')`
 - fixed applying the `$insecure` option in the FlowStream
 - fixed routing for unexpected content-type
+- added `controller.authorize([callback])` method
 
 ========================
 0.0.2
